site/src/main/webapp/css/web-components-global-styles.css
/* Buttons */
paper-button {
	background: #E40037;
	color: white;
	font: 16px/16px 'Open Sans', Helvetica, sans-serif;
}

/* Input */
paper-input /deep/ .focused-underline {
	background-color: #E40037;
}

/* Tabs */
paper-tabs {
	background-color: white;
}
paper-tabs paper-tab::shadow * {
	font: 'Open Sans', Helvetica, sans-serif;
	font-size: 16px;
	font-weight: 600;
	color: #655c5a;
}
paper-tabs::shadow #selectionBar {
	background-color: #C8C3C1;
}
paper-tabs paper-tab::shadow #ink {
	color: #C8C3C1;
}

/* Products */
.product-list {
	padding:0;
	list-style-type:none;
	display:inline-block;
}
.product-list li {
	float:left;
	display:inline-block;
	margin-right:18px;
}
.product-list li:nth-child(5n) {
	margin-right:0px;
}

